--- a/register.html
+++ b/register.html
@@ -139,7 +139,7 @@ jQuery(function(jquery) {
           </div>
         </div>
         <div class="l-box btn_register_submit">
-          <button name="submit_register" id="submit_register" onClick="return accountRegister();">Cadastrar Meu Perfil </button>
+          <button name="submit_register" id="submit_register">Cadastrar Meu Perfil </button>
         </div>
       </div>
     </div>
@@ -173,7 +173,8 @@ jQuery(function(jquery) {
 </body>
 
  <script type="text/javascript">
-  function getImage1() {	  
+$(document).ready(function(e) {    
+$("#image_sr_1").on('click, touchstart', function(){  
 	             
            navigator.camera.getPicture(uploadPhoto1, function(message) {
 						
@@ -194,7 +195,8 @@ jQuery(function(jquery) {
 		}
             );
  
-        }
+      	});
+	});
  
         function uploadPhoto1(imageURI1) {
 			var upload_url = siteurl + '?route=account/upload';
@@ -392,7 +394,9 @@ function callBackFunctionFlag(){
  </script>
 <script type="text/javascript">
 
-function accountRegister(){
+$(document).ready(function(e) { 
+$("#submit_register").on('click, touchstart', function(){
+	
 	var url = siteurl + '?route=account/register';
 	jQuery.ajax({
 			 type: 'POST',
@@ -464,8 +468,9 @@ function accountRegister(){
 					window.location = './thank-you.html';
 				}
 			}
-   });
-}
+   		});
+	});
+});
 </script>
 <script type="text/javascript">
 
