--- a/update_password.html
+++ b/update_password.html
@@ -16,6 +16,14 @@
 if(localStorage.getItem("customer_log_id") === null) {
   window.location = './login.html';
 }
+
+function checkDevice(){
+		document.addEventListener("deviceready", onDeviceReady, false);
+}
+
+function onDeviceReady() {
+ 		return true;
+  }
 </script> 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,7 +32,7 @@ if(localStorage.getItem("customer_log_id") === null) {
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body onLoad="checkDevice();">
 <div id="o-wrapper" class="o-wrapper innerpage">
  <div class="container loginpage">
 <div class="innercontent">
