--- a/edit-account.html
+++ b/edit-account.html
@@ -24,6 +24,14 @@ if(localStorage.getItem("customer_log_id") === null) {
 </script>
 <script type="text/javascript">
 
+function checkDevice(){
+		document.addEventListener("deviceready", onDeviceReady, false);
+}
+
+function onDeviceReady() {
+ 		getProfile();
+  }
+  
 function getProfile(){
 	
 	var url = siteurl + '?route=account/login/getprofile';
@@ -83,7 +91,7 @@ jQuery(function(jquery) {
 
 </script>
 </head>
-<body onLoad="getProfile();">
+<body onLoad="checkDevice();">
 <div id="o-wrapper" class="o-wrapper innerpage editaccountms">
   <div class="container loginpage">
     <header class="header">
