--- a/favourite.html
+++ b/favourite.html
@@ -34,6 +34,14 @@ if (localStorage.getItem("customer_log_id") === null) {
   window.location = './login.html';
 }
 
+function checkDevice(){
+		document.addEventListener("deviceready", onDeviceReady, false);
+}
+
+function onDeviceReady() {
+ 		loadFav();
+  }
+
 function loadFav(){
 	var url = siteurl + '?route=common/home/myFav';
 	jQuery.ajax({
@@ -82,7 +90,7 @@ function loadFav(){
 
 
 </head>
-<body class="favbgmain" onLoad="loadFav();">
+<body class="favbgmain" onLoad="checkDevice();">
 <div id="o-wrapper" class="o-wrapper innerpage">
   <div class="container favrouitepage">
     <header class="header">
