--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 <script type="text/javascript">
+
+function checkDevice(){
+		document.addEventListener("deviceready", onDeviceReady, false);
+}
+
+function onDeviceReady() {
+ 		return true;
+  }
+
+
 if(localStorage.getItem("customer_log_id") === null){
   window.location = './login.html';
 }else if(parseInt(localStorage.getItem("customer_log_id")) > 0)
@@ -243,7 +253,7 @@ function rateUser(rate_point){
 
 
 </head>
-<body onLoad="getFlag();">
+<body onLoad="checkDevice(); getFlag();">
 <div id="o-wrapper" class="o-wrapper">
 
   <div class="container">
