--- a/ranking.html
+++ b/ranking.html
@@ -4,10 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 <title>CastelLove</title>
-
-<!-- Bootstrap -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="css/owl.carousel.css">
 <link href="css/demo.css" rel="stylesheet">
@@ -25,6 +22,15 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 <script type="text/javascript">
+
+function checkDevice(){
+		document.addEventListener("deviceready", onDeviceReady, false);
+}
+
+function onDeviceReady() {
+ 		return true;
+  }
+  
 function getRanking(){
 	
 	var url = siteurl + '?route=common/home/getRanking';
@@ -65,7 +71,7 @@ function getRanking(){
 	}
 </script>
 </head>
-<body class="ranking-page" onLoad="getRanking();">
+<body class="ranking-page" onLoad="checkDevice(); getRanking();">
 <div id="o-wrapper" class="o-wrapper innerpage">
   <div class="container rnk-page">
     <header class="header">
