--- a/register.html
+++ b/register.html
@@ -133,7 +133,7 @@ function onDeviceReady() {
           <div class="custom-file-upload"> <img src="images/uploadimg.png" id="image_sr_2" onclick="getImage2();" class="img-responsive">
           <input type="hidden" name="profile_image_2" id="profile_image_2">
            </div>
-          <div class="custom-file-upload"> <img src="images/uploadimg.png" id="image_sr_3" onclick="getImage3();" class="img-responsive">
+          <div class="custom-file-upload cu-third"> <img src="images/uploadimg.png" id="image_sr_3" onclick="getImage3();" class="img-responsive">
           <input type="hidden" name="profile_image_3" id="profile_image_3">
            </div>
           <div class="up-rightbox">
