--- a/register.html
+++ b/register.html
@@ -18,6 +18,12 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/circletype.js"></script>
+<script>
+  document.addEventListener("deviceready", onDeviceReady, false);
+  function onDeviceReady() {
+   navigator.splashscreen.hide()
+  }
+</script>
 <script type="text/javascript">
 jQuery(function(jquery) {
  jquery('select').selectBoxIt();
