--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 <script src="js/owl.carousel.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/circletype.js"></script>
+<script>
+  document.addEventListener("deviceready", onDeviceReady, false);
+  function onDeviceReady() {
+   navigator.splashscreen.hide()
+  }
+</script>
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
