--- a/login.html
+++ b/login.html
@@ -12,6 +12,12 @@
 <script src="js/bootstrap.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript" src="js/config.js"></script>
+<script>
+  document.addEventListener("deviceready", onDeviceReady, false);
+  function onDeviceReady() {
+   navigator.splashscreen.hide()
+  }
+</script>
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
