--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <script>
   document.addEventListener("deviceready", onDeviceReady, false);
   function onDeviceReady() {
-   navigator.splashscreen.hide()
+   navigator.splashscreen.hide();   
   }
 </script>
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
