--- a/edit-account.html
+++ b/edit-account.html
@@ -91,7 +91,7 @@ jQuery(function(jquery) {
 
 </script>
 </head>
-<body onLoad="checkDevice();">
+<body onLoad="getProfile();">
 <div id="o-wrapper" class="o-wrapper innerpage editaccountms">
   <div class="container loginpage">
     <header class="header">
@@ -210,7 +210,7 @@ jQuery(function(jquery) {
 						"Está bem"
 					);
 		},{
-			quality: 50,
+			quality: 100,
 			correctOrientation: true,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
@@ -286,7 +286,7 @@ jQuery(function(jquery) {
 						"Está bem"
 					);
 		},{
-			quality: 50, 
+			quality: 100, 
 			correctOrientation: true,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
@@ -359,7 +359,7 @@ jQuery(function(jquery) {
 						"Está bem"
 					);
 		},{
-			quality: 50,
+			quality: 100,
 			correctOrientation: true,					
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
