--- a/forgot_password.html
+++ b/forgot_password.html
@@ -23,17 +23,9 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-<script type="text/javascript">
-function checkDevice(){
-		document.addEventListener("deviceready", onDeviceReady, false);
-}
 
-function onDeviceReady() {
- 		return true;
-  }
-</script>
 </head>
-<body onLoad="checkDevice();">
+<body>
 <div id="o-wrapper" class="o-wrapper innerpage">
   <div class="container loginpage">
     <div class="innercontent">
