--- a/update_password.html
+++ b/update_password.html
@@ -16,14 +16,6 @@
 if(localStorage.getItem("customer_log_id") === null) {
   window.location = './login.html';
 }
-
-function checkDevice(){
-		document.addEventListener("deviceready", onDeviceReady, false);
-}
-
-function onDeviceReady() {
- 		return true;
-  }
 </script> 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,7 +24,7 @@ function onDeviceReady() {
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body onLoad="checkDevice();">
+<body>
 <div id="o-wrapper" class="o-wrapper innerpage">
  <div class="container loginpage">
 <div class="innercontent">
