--- a/edit-account.html
+++ b/edit-account.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>CastelLove</title>
+<title>Cristãos Solteiros</title>
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/demo.css" rel="stylesheet">
 <link href="css/menu.css" rel="stylesheet">
@@ -91,7 +91,7 @@ jQuery(function(jquery) {
 
 </script>
 </head>
-<body onLoad="getProfile();">
+<body onLoad="checkDevice();">
 <div id="o-wrapper" class="o-wrapper innerpage editaccountms">
   <div class="container loginpage">
     <header class="header">
@@ -210,7 +210,7 @@ jQuery(function(jquery) {
 						"Está bem"
 					);
 		},{
-			quality: 100,
+			quality: 50,
 			correctOrientation: true,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
@@ -286,7 +286,7 @@ jQuery(function(jquery) {
 						"Está bem"
 					);
 		},{
-			quality: 100, 
+			quality: 50, 
 			correctOrientation: true,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
@@ -359,7 +359,7 @@ jQuery(function(jquery) {
 						"Está bem"
 					);
 		},{
-			quality: 100,
+			quality: 50,
 			correctOrientation: true,					
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
