--- a/favourite.html
+++ b/favourite.html
@@ -4,10 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<title>CastelLove</title>
-
-<!-- Bootstrap -->
+<title>Cristãos Solteiros</title>
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="css/owl.carousel.css">
 <link href="css/demo.css" rel="stylesheet">
