--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-<title>CastelLove</title>
+<title>Cristãos Solteiros</title>
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/demo.css" rel="stylesheet">
 <link href="css/menu.css" rel="stylesheet">
