--- a/ranking.html
+++ b/ranking.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>CastelLove</title>
+<title>Cristãos Solteiros</title>
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="css/owl.carousel.css">
 <link href="css/demo.css" rel="stylesheet">
@@ -71,7 +71,7 @@ function getRanking(){
 	}
 </script>
 </head>
-<body class="ranking-page" onLoad="checkDevice();">
+<body class="ranking-page" onLoad="getRanking();">
 <div id="o-wrapper" class="o-wrapper innerpage">
   <div class="container rnk-page">
     <header class="header">
