--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-<title>CastelLove</title>
+<title>Cristãos Solteiros</title>
 <!-- Bootstrap -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/demo.css" rel="stylesheet">
@@ -18,6 +18,12 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/circletype.js"></script>
+<script>
+  document.addEventListener("deviceready", onDeviceReady, false);
+  function onDeviceReady() {
+   navigator.splashscreen.hide()
+  }
+</script>
 <script type="text/javascript">
 jQuery(function(jquery) {
  jquery('select').selectBoxIt();
@@ -204,7 +210,7 @@ function onDeviceReady() {
 			
 			
 		},{
-			quality: 100, 
+			quality: 50, 
 			correctOrientation: true,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
@@ -274,7 +280,7 @@ function onDeviceReady() {
 						"Está bem"
 					);
 		},{
-			quality: 100,
+			quality: 50,
 			correctOrientation: true,					
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
@@ -347,7 +353,7 @@ function onDeviceReady() {
 						"Está bem"
 					);
 		},{
-			quality: 100,
+			quality: 50,
 			correctOrientation: true,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
