--- a/register.html
+++ b/register.html
@@ -211,7 +211,9 @@ function onDeviceReady() {
 			
 		},{
 			quality: 50, 
-			correctOrientation: true,						
+			correctOrientation: true,
+			targetWidth: 600,
+            targetHeight: 600,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -281,7 +283,9 @@ function onDeviceReady() {
 					);
 		},{
 			quality: 50,
-			correctOrientation: true,					
+			correctOrientation: true,
+			targetWidth: 600,
+            targetHeight: 600,					
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -354,6 +358,8 @@ function onDeviceReady() {
 					);
 		},{
 			quality: 50,
+			targetWidth: 600,
+            targetHeight: 600,
 			correctOrientation: true,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
