--- a/edit-account.html
+++ b/edit-account.html
@@ -211,7 +211,9 @@ jQuery(function(jquery) {
 					);
 		},{
 			quality: 50,
-			correctOrientation: true,						
+			correctOrientation: true,
+			targetWidth: 600,
+            targetHeight: 600,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -286,7 +288,9 @@ jQuery(function(jquery) {
 						"Está bem"
 					);
 		},{
-			quality: 50, 
+			quality: 50,
+			targetWidth: 600,
+            targetHeight: 600, 
 			correctOrientation: true,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
@@ -360,6 +364,8 @@ jQuery(function(jquery) {
 					);
 		},{
 			quality: 50,
+			targetWidth: 600,
+            targetHeight: 600,
 			correctOrientation: true,					
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
