--- a/register.html
+++ b/register.html
@@ -504,7 +504,7 @@ function accountRegister(){
 </script>
 <script type="text/javascript">
 
- $('#header .head-line span').circleType({radius: 1200}); 
+ //$('#header .head-line span').circleType({radius: 1200}); 
 
  </script>
 
