--- a/edit-account.html
+++ b/edit-account.html
@@ -191,7 +191,7 @@ jQuery(function(jquery) {
 <div class="loader"></div>
 
 <script>
- $('.head-line span').circleType({radius: 1200});  
+ //$('.head-line span').circleType({radius: 1200});  
  </script>
  <script type="text/javascript">
  function callBackFunctionFlag(){
