--- a/register.html
+++ b/register.html
@@ -212,6 +212,7 @@ function onDeviceReady() {
 		},{
 			quality: 50, 
 			correctOrientation: true,
+			allowEdit : true,
 			targetWidth: 600,
             targetHeight: 600,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
@@ -284,6 +285,7 @@ function onDeviceReady() {
 		},{
 			quality: 50,
 			correctOrientation: true,
+			allowEdit : true,
 			targetWidth: 600,
             targetHeight: 600,					
 			destinationType: navigator.camera.DestinationType.FILE_URI,
@@ -360,6 +362,7 @@ function onDeviceReady() {
 			quality: 50,
 			targetWidth: 600,
             targetHeight: 600,
+			allowEdit : true,
 			correctOrientation: true,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
