--- a/edit-account.html
+++ b/edit-account.html
@@ -212,6 +212,7 @@ jQuery(function(jquery) {
 		},{
 			quality: 50,
 			correctOrientation: true,
+			allowEdit : true,
 			targetWidth: 600,
             targetHeight: 600,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
@@ -291,7 +292,8 @@ jQuery(function(jquery) {
 			quality: 50,
 			targetWidth: 600,
             targetHeight: 600, 
-			correctOrientation: true,						
+			correctOrientation: true,
+			allowEdit : true,						
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
@@ -366,7 +368,8 @@ jQuery(function(jquery) {
 			quality: 50,
 			targetWidth: 600,
             targetHeight: 600,
-			correctOrientation: true,					
+			correctOrientation: true,
+			allowEdit : true,					
 			destinationType: navigator.camera.DestinationType.FILE_URI,
 			sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
 		}
